# tarubot

./: .env.example  .gitignore  README.md  build.js  config.py  package-lock.json  package.json  pyproject.toml  settings.yaml  tsconfig.json
.github/workflows/: build.yml  codeql.yml
config/: local.yaml.example
src/: config.ts  deploy.ts  index.ts  logging.ts  start.ts  types.d.ts
src/commands/chat/character/: character.ts
src/commands/chat/event/: event.ts
src/commands/input/: character.ts  event.ts
src/commands/utils/: ping.ts
src/config/: local.yaml.example
src/events/: interactionCreate.ts  ready.ts
src/events/core/: interactionCreate.ts
src/models/: character.ts  event.ts  job.ts  signup.ts  user.ts
src/tarubot/: __init__.py  main.py
src/tarubot/api/: lodestone.py
src/tarubot/cogs/: chat.py  config.py  fc.py  members.py  utility.py
src/tarubot/core/: __init__.py  tarubot.py
src/tarubot/models/: db.py
src/util/: db.ts
src/views/: event.ts
